trunk/Archive2/d3/ba0fef66c1b317/output
fun!
main.cpp:9:24: error: defining explicit specialization 'f<int>' in friend declaration
     friend void f<int>() { 
                        ^
main.cpp:9:24: error: ambiguating new declaration of 'void f()'
main.cpp:4:6: note: old declaration 'void f() [with <template-parameter-1-1> = int]'
 void f() {
      ^
